@@ -1,3 +1,8 @@
+2007-10-10  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpcontrollerinfo.c
+	* app/widgets/gimpcontrollers.c: formatting.
+
 2007-10-09  Martin Nordholts  <martinn@svn.gnome.org>
 
 	* libgimpwidgets/gimpnumberpairentry.c
